--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,35 +1,26 @@
-name: Laravel
+name: 🚀 FTP Deploy
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main  # main ব্রাঞ্চে push করলে trigger হবে
 
 jobs:
-  laravel-tests:
-
+  ftp-deploy:
+    name: 📤 Upload via FTP
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.0'
-    - uses: actions/checkout@v4
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p database
-        touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+      - name: 🔄 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 📁 Upload to FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.4.0
+        with:
+          server: ftp.byethost33.com
+          username: b33_39554238
+          password: nokhil22
+          protocol: ftp
+          port: 21
+          server-dir: /htdocs/  # এখানে আপনি আপনার FTP ফোল্ডার দিতে পারেন
+          local-dir: ./              # আপনার প্রজেক্টের কোন ফোল্ডার আপলোড হবে
