--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ APP_ENV=local
 APP_KEY=base64:sY+vhdlzoxFcptymvFZeC2rH0dPK7PzVR271DmYzh1M=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://njkala.byethost33.com/public/
+APP_URL=njkala.byethost33.com/public/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
